Fix problems on changing 'multiple' state SELECT element to 'single' state.

This CL fixes two problems.

* Setting 'multiple' IDL attribute to false and removing 'multiple' content
  attribute had different behavior.
  They should be identical.  This CL removes HTMLSelectElement::setMultiple(), and
  add [Reflect] to 'multiple' IDL attribute.

* If multiple SELECT without selected OPTIONs is changed to single, we should run
  resetToDefaultSelection().
  All other browsers agree with this behavior.

BUG=599008

Review URL: https://codereview.chromium.org/1838183003

Cr-Commit-Position: refs/heads/master@{#384226}

Former-commit-id: ed6cd6b785c97d4a678c262bbf5e62bf46e5a2e8